# SysEye

./: .gitignore  README.md  docker-compose.yml  install-syseye-agent.ps1
.github/workflows/: publish-pypi.yml
bd/: .env  .gitignore  README.md  configuration.md  docker-compose.dev.yml  docker-compose.yml  run.md  telegram-bot-webhook.md
bd/hackaton/: .env  docker-compose.yml
bd/src/: .dockerignore  Hackaton.sln
cli-agent/: LICENSE  PUBLISHING.md  README.md  agent.py  api.py  config.py  executor.py  install-syseye-agent.ps1  main.py  pyproject.toml
cli-agent/src/syseye_agent/: __main__.py  agent.py  api.py  cli.py  config.py  executor.py  realtime.py  service.py
cli-agent/src/syseye_agent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
email-fallback/: server.py
front/: .dockerignore  Dockerfile  package-lock.json  package.json
front/app/: globals.css  layout.tsx  page.tsx
front/components/: agent-card.tsx  agent-group-terminal-panel.tsx  agent-metrics-dashboard.tsx  agent-platform-art.tsx  agent-rating-board.tsx  app-brand.tsx  auth-shell.tsx  commands-studio.tsx  confirm-email-client.tsx  dashboard-shell.tsx  email-confirmation-panel.tsx  faulty-terminal.tsx  password-recovery-panel.tsx  select-field-ui.tsx  terminal-panel.tsx  ui.tsx
front/lib/: agent-groups.ts  agent-launch.ts  api-client.ts  api-error.ts  backend-types.ts  backend-url.ts  client-realtime.ts  command-overrides.ts  commands.ts  diagnostics.ts  execution-history.ts  execution-logs.ts  hackaton-proxy.ts  local-agent-runtime.ts  mock-data.ts  (+2 more)
(+266 files in other folders)
